--- a/src/style/valiable.less
+++ b/src/style/valiable.less
@@ -3,3 +3,5 @@
 @back-color: rgba(30,38,56,1);
 @back-gradient: linear-gradient(to bottom, rgba(30,38,56,1) 5%, rgba(51,57,103,1) 95%);
 @link-color: #faa44e;
+
+@anime-base-time: 0.1s;
