--- a/docs/style.css
+++ b/docs/style.css
@@ -38,6 +38,10 @@ section {
 section.show {
   display: block;
 }
+.scrill {
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
 #contents {
   overflow: hidden;
 }
@@ -109,18 +113,56 @@ h1 {
 .card {
   position: relative;
 }
-.card > img {
+.card div {
+  height: 100%;
+}
+.card img {
   display: block;
 }
-.card.h > img {
+.card.h img {
   width: 100%;
 }
-.card.v > img {
+.card.v img {
   height: 100%;
+}
+.card.fadeout div {
+  margin-top: 0;
+  opacity: 1;
+}
+.card.fadeout.start div {
+  transition: margin-top 0.1s, opacity 0.1s, height 0.1s;
+  margin-top: -50%;
+  opacity: 0;
+}
+.card.fadeout.end div {
+  height: 0;
+}
+.card.fadein div {
+  height: 0;
+  margin-top: -50%;
+  opacity: 0;
+}
+.card.fadein.start div {
+  transition: margin-top 0.1s, opacity 0.1s, height 0.1s;
+  height: 100%;
+}
+.card.fadein.end div {
+  margin-top: 0;
+  opacity: 1;
 }
 #dungeon {
   position: relative;
   height: auto;
+}
+#dungeon.disable:after {
+  content: '';
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #dungeon > img {
   display: block;
@@ -207,7 +249,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
 }
 #dungeon > .buttons {
   overflow: hidden;
